Fix scrollbar issue and Edge / IE zindex issue with grid picker

--- a/theme/blockly-core.less
+++ b/theme/blockly-core.less
@@ -9,11 +9,11 @@
 
 /* Lower Z index for BlocklyWidgetDiv and grid picker tooltips */
 .blocklyWidgetDiv {
-    z-index: 105;
+    z-index: 105 !important;
 }
 
 .blocklyGridPickerTooltip {
-    z-index: 106;
+    z-index: 106 !important;
 }
 
 .blocklyGridPickerPadder {
